--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -2,14 +2,14 @@
 
 <h1>Users</h1>
 
-<table id="users_list" >
+<table id="users_list" class="display" >
   <thead>
     <tr>
       <th>First name</th>
       <th>Last name</th>
       <th>Birthday</th>
       <th>Address</th>
-      <th colspan="3">Actions</th>
+      <th>Actions</th>
     </tr>
   </thead>
 
