I am anderstood server side ajax

--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -2,7 +2,7 @@
 
 <h1>Users</h1>
 
-<table id="users_list" class="display" >
+<table id="users_list" class="cell-border" style="width:100%" >
   <thead>
     <tr>
       <th>First name</th>
@@ -12,9 +12,7 @@
       <th>Actions</th>
     </tr>
   </thead>
-
   <tbody>
- 
   </tbody>
 </table>
 
