--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,9 +1,4 @@
-<p id="notice"><%= notice %></p>
-
-<h1>Users</h1>
-
-
- <table id="users_list" class="cell-border" style="width:100%" >
+ <table id="users_list" class="table table-hover" >
   <thead>
     <tr>
       <th>First name</th>
