--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,5 +1,5 @@
  <table id="users_list" class="table table-hover" >
-  <thead>
+  <thead class="thead-dark">
     <tr>
       <th>First name</th>
       <th>Last name</th>
