Birthday as string

--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -23,7 +23,7 @@
 
   <div class="field">
     <%= form.label :birthday %>
-    <%= form.date_select :birthday %>
+    <%= form.text_field :birthday, placeholder: "11.02.1984" %>
   </div>
 
   <div class="field">
